# formlabs-local-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
src/formlabs_local_mcp/: __init__.py  __main__.py  client.py  config.py  paths.py  preform.py  server.py
tests/: smoke_e2e.py  test_client.py  test_config_loopback.py  test_import_verification.py  test_paths.py
